--- a/app/src/main/res/layout/activity_deposit_id_details.xml
+++ b/app/src/main/res/layout/activity_deposit_id_details.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Deposit_Id_details">
+    tools:context=".Act_Deposit_Id_details">
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
