--- a/app/src/main/res/layout/activity_close_id_list.xml
+++ b/app/src/main/res/layout/activity_close_id_list.xml
@@ -77,12 +77,12 @@
     </androidx.constraintlayout.widget.ConstraintLayout>
     <LinearLayout
         android:id="@+id/lay"
-        android:visibility="gone"
         app:layout_constraintTop_toBottomOf="@+id/c1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
+        android:visibility="gone"
         android:orientation="vertical"
         tools:ignore="MissingConstraints">
 
@@ -108,7 +108,6 @@
             <LinearLayout
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="30dp"
                 android:layout_weight=".5"
                 android:orientation="vertical"
                 tools:ignore="Suspicious0dp">
@@ -143,7 +142,6 @@
             <LinearLayout
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="30dp"
                 android:layout_weight=".5"
                 android:orientation="vertical"
                 tools:ignore="Suspicious0dp">
@@ -179,7 +177,6 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight=".5"
-                android:layout_marginStart="30dp"
                 android:orientation="vertical"
                 tools:ignore="Suspicious0dp">
                 <TextView
@@ -215,7 +212,6 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight=".5"
-                android:layout_marginStart="30dp"
                 android:orientation="vertical"
                 tools:ignore="Suspicious0dp">
                 <TextView
@@ -250,7 +246,6 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight=".5"
-                android:layout_marginStart="30dp"
                 android:orientation="vertical"
                 tools:ignore="Suspicious0dp">
                 <TextView
@@ -264,10 +259,12 @@
         </LinearLayout>
 
         <LinearLayout
+            android:id="@+id/l_reson"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:layout_marginStart="20dp"
+            android:visibility="gone"
             android:weightSum="1"
             android:padding="5dp">
             <LinearLayout
@@ -286,7 +283,6 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight=".5"
-                android:layout_marginStart="30dp"
                 android:orientation="vertical"
                 tools:ignore="Suspicious0dp">
                 <TextView
@@ -299,6 +295,8 @@
             </LinearLayout>
         </LinearLayout>
         <LinearLayout
+            android:id="@+id/l_othissue"
+            android:visibility="gone"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
@@ -321,7 +319,6 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight=".5"
-                android:layout_marginStart="30dp"
                 android:orientation="vertical"
                 tools:ignore="Suspicious0dp">
                 <TextView
