--- a/app/src/main/res/layout/newwebsite.xml
+++ b/app/src/main/res/layout/newwebsite.xml
@@ -109,7 +109,7 @@
 
         <ImageView
             android:id="@+id/mv_tenis"
-            android:src="@drawable/badminton"
+            android:src="@drawable/tennis"
             android:layout_margin="10dp"
             android:layout_width="20dp"
             android:layout_height="20dp"/>
@@ -212,7 +212,7 @@
                 android:drawableTint="@color/white"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/ft"
-                android:drawableLeft="@drawable/badminton"
+                android:drawableLeft="@drawable/tennis"
                 style="@style/textsubtile"
                 android:text="@string/Tennis"/>
             <TextView
