--- a/app/src/main/res/layout/activity_deposits_details.xml
+++ b/app/src/main/res/layout/activity_deposits_details.xml
@@ -8,7 +8,7 @@
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@drawable/bg_edit_text"
+            android:background="@drawable/card_shape"
             android:padding="6dip"
             android:layout_marginTop="10dp"
             android:layout_marginRight="10dp"
