--- a/app/src/main/res/layout/recyleview_list.xml
+++ b/app/src/main/res/layout/recyleview_list.xml
@@ -10,8 +10,7 @@
         android:layout_margin="5dp"
         android:id="@+id/recycle_all"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:listitem="@layout/activity_user_requestlist">
+        android:layout_height="match_parent">
 
     </androidx.recyclerview.widget.RecyclerView>
 
