--- a/app/src/main/res/layout/activity_user_requestlist.xml
+++ b/app/src/main/res/layout/activity_user_requestlist.xml
@@ -23,7 +23,7 @@
             android:id="@+id/layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@drawable/bg_edit_text"
+            android:background="@drawable/card_shape"
             android:orientation="horizontal"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
