--- a/app/src/main/res/layout/activity_close_id_list.xml
+++ b/app/src/main/res/layout/activity_close_id_list.xml
@@ -406,7 +406,7 @@
                 android:layout_height="45dp"
                 android:background="@drawable/buttonblue_shape"
                 android:fontFamily="@font/gtwalsheimpro_regular"
-                android:text="Approve"
+                android:text="approval"
                 android:textColor="@color/white" />
 
             <View
@@ -419,7 +419,7 @@
                 android:layout_height="45dp"
                 android:fontFamily="@font/gtwalsheimpro_regular"
                 android:background="@drawable/button_shape"
-                android:text="Disapprove"
+                android:text="Rejected"
                 android:textColor="@color/white" />
 
         </LinearLayout>
