--- a/app/src/main/res/layout/new_dashbord.xml
+++ b/app/src/main/res/layout/new_dashbord.xml
@@ -621,7 +621,7 @@
 
             <LinearLayout
                 android:orientation="horizontal"
-                android:layout_width="190dp"
+                android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:layout_weight="1"
                 android:gravity="center">
@@ -663,8 +663,8 @@
                     </androidx.constraintlayout.widget.ConstraintLayout>
                 </androidx.cardview.widget.CardView>
 
-                <!--<androidx.cardview.widget.CardView
-                    android:id="@+id/card9"
+                <androidx.cardview.widget.CardView
+                    android:id="@+id/card10"
                     android:layout_width="0dp"
                     android:layout_weight="1"
                     android:layout_height="130dp"
@@ -686,19 +686,19 @@
                             <ImageView
                                 android:layout_width="50dp"
                                 android:layout_height="50dp"
-                                android:src="@drawable/banners"
+                                android:src="@drawable/chat"
                                 android:layout_marginTop="18dp"/>
 
                             <TextView
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:text="Create Banner"
+                                android:text="Raise Concern"
                                 style="@style/dashbord"
                                 android:layout_marginTop="20dp"/>
 
                         </LinearLayout>
                     </androidx.constraintlayout.widget.ConstraintLayout>
-                </androidx.cardview.widget.CardView>-->
+                </androidx.cardview.widget.CardView>
             </LinearLayout>
         </LinearLayout>
         </ScrollView>
