--- a/app/src/main/res/layout/witdrawl_imgupload.xml
+++ b/app/src/main/res/layout/witdrawl_imgupload.xml
@@ -85,7 +85,7 @@
                 android:layout_weight="1"
                 android:layout_marginBottom="20dp"
                 android:background="@drawable/bg_edit_text1"
-                android:text="approve" />
+                android:text="approval" />
         </LinearLayout>
     </ScrollView>
 
