--- a/app/src/main/res/layout/payment_depositlist_id.xml
+++ b/app/src/main/res/layout/payment_depositlist_id.xml
@@ -1,123 +1,130 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginTop="5dp"
-    android:layout_margin="5dp">
-    <androidx.cardview.widget.CardView
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_margin="5dp"
+    android:background="@drawable/card_shape">
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/c1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:cardCornerRadius="10dp"
-        app:cardElevation="8dp"
-        app:cardMaxElevation="5dp"
+        android:padding="10dp"
         tools:ignore="MissingConstraints">
-        <LinearLayout
-            android:id="@+id/btn_layoutd"
-            android:orientation="horizontal"
-            android:background="@drawable/card_shape"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
 
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:layout_marginLeft="20dp"
-                android:orientation="vertical"
-                android:padding="4dp">
+        <de.hdodenhof.circleimageview.CircleImageView
+            android:id="@+id/img_web"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_gravity="center"
+            android:src="@drawable/spiderlogo5"
+            app:civ_border_width="2dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            tools:layout_editor_absoluteX="0dp" />
 
-                <TextView
-                    android:id="@+id/tv_username"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="5dp"
-                    android:text="Payment Deposits"
-                    style="@style/texttitle" />
-                <TextView
-                    android:id="@+id/tv_coin"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="5dp"
-                    android:text="5000"
-                    style="@style/textsubtile" />
-            </LinearLayout>
-            <ImageView
-                android:id="@+id/edit"
-                android:src="@drawable/ic_baseline_arrow_right_24"
-                android:layout_gravity="center"
-                android:layout_marginRight="25dp"
-                android:layout_width="35dp"
-                android:layout_height="35dp"/>
-        </LinearLayout>
+        <TextView
+            android:id="@+id/tv_username"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="64dp"
+            android:text="Payment Deposits"
+            style="@style/texttitle"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
-    </androidx.cardview.widget.CardView>
+        <TextView
+            android:id="@+id/tv_coin"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="4dp"
+            android:text="500"
+            style="@style/textsubtile"
+            app:layout_constraintStart_toStartOf="@+id/tv_username"
+            app:layout_constraintTop_toBottomOf="@id/tv_username" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
-  <!--  <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-xmlns:app="http://schemas.android.com/apk/res-auto"
-xmlns:tools="http://schemas.android.com/tools"
-android:layout_width="match_parent"
-android:layout_height="wrap_content"
-android:layout_marginTop="5dp"
-android:layout_margin="10dp"
-android:background="@drawable/card_shape"
-android:backgroundTint="@color/white">
-<androidx.cardview.widget.CardView
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    app:cardCornerRadius="5dp"
-    app:cardElevation="8dp"
-    app:cardMaxElevation="5dp"
-    tools:ignore="MissingConstraints">
-    <LinearLayout
-        android:id="@+id/btn_layout"
-        android:orientation="horizontal"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
 
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:layout_marginLeft="20dp"
-            android:orientation="vertical"
-            android:padding="4dp">
+            android:orientation="horizontal"
 
-            <TextView
-                android:id="@+id/payment"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="5dp"
-                android:text="Payment Deposits"
-                android:textColor="#01030b"
-                android:textSize="19sp"
-                android:fontFamily="@font/gtwalsheimpro_bold" />
-            <TextView
-                android:id="@+id/paymetcoin"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="5dp"
-                android:text="5000"
-                android:textColor="#01030b"
-                android:textSize="12sp"
-                android:fontFamily="@font/gtwalsheimpro_regular" />
+            app:layout_constraintBottom_toBottomOf="@id/tv_coin"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/tv_username">
+
+            <ImageView
+                android:id="@+id/edit"
+                android:layout_width="35dp"
+                android:layout_height="35dp"
+                android:layout_gravity="center"
+                android:layout_margin="10dp"
+                android:src="@drawable/ic_baseline_arrow_right_24" />
+
         </LinearLayout>
-        <ImageView
-            android:id="@+id/edit"
-            android:src="@drawable/ic_baseline_arrow_right_24"
-            android:layout_gravity="center"
-            android:layout_marginRight="25dp"
-            android:layout_width="35dp"
-            android:layout_height="35dp"/>
-    </LinearLayout>
 
-</androidx.cardview.widget.CardView>
-
+    </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
 
--->
 
+    <!--<?xml version="1.0" encoding="utf-8"?>
+    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="5dp"
+        android:layout_margin="5dp">
+        <androidx.cardview.widget.CardView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:cardCornerRadius="10dp"
+            app:cardElevation="8dp"
+            app:cardMaxElevation="5dp"
+            tools:ignore="MissingConstraints">
+            <LinearLayout
+                android:id="@+id/btn_layoutd"
+                android:orientation="horizontal"
+                android:background="@drawable/card_shape"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:layout_marginLeft="20dp"
+                    android:orientation="vertical"
+                    android:padding="4dp">
+
+                    <TextView
+                        android:id="@+id/tv_username"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="5dp"
+                        android:text="Payment Deposits"
+                        style="@style/texttitle" />
+                    <TextView
+                        android:id="@+id/tv_coin"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="5dp"
+                        android:text="5000"
+                        style="@style/textsubtile" />
+                </LinearLayout>
+                <ImageView
+                    android:id="@+id/edit"
+                    android:src="@drawable/ic_baseline_arrow_right_24"
+                    android:layout_gravity="center"
+                    android:layout_marginRight="25dp"
+                    android:layout_width="35dp"
+                    android:layout_height="35dp"/>
+            </LinearLayout>
+
+        </androidx.cardview.widget.CardView>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+      -->
 
