--- a/app/src/main/res/layout/activity_user_list.xml
+++ b/app/src/main/res/layout/activity_user_list.xml
@@ -71,7 +71,14 @@
                 android:layout_gravity="center"
                 android:layout_margin="10dp"
                 android:src="@drawable/ic_baseline_arrow_right_24" />
-
+            <ImageView
+                android:id="@+id/moredetail"
+                android:layout_width="30dp"
+                android:layout_height="25dp"
+                android:layout_gravity="center"
+                android:layout_margin="10dp"
+                android:src="@drawable/ic_baseline_more_vert_24"
+                app:tint="@color/white" />
         </LinearLayout>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
