--- a/app/src/main/res/layout/new_dashbord.xml
+++ b/app/src/main/res/layout/new_dashbord.xml
@@ -82,162 +82,6 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
         </androidx.constraintlayout.widget.ConstraintLayout>
-        <!--<LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_marginRight="10dp"
-            android:layout_marginLeft="10dp"
-            android:weightSum="3">
-
-            <androidx.cardview.widget.CardView
-                android:layout_width="0dp"
-                app:cardBackgroundColor="@color/d_black"
-                android:layout_height="wrap_content"
-                android:layout_margin="10dp"
-                app:cardCornerRadius="15dp"
-                app:cardElevation="10dp"
-                app:cardMaxElevation="5dp"
-                android:layout_weight="1">
-                <androidx.constraintlayout.widget.ConstraintLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:background="@color/black">
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:orientation="vertical"
-                        android:gravity="center">
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="center_horizontal"
-                            android:fontFamily="@font/gtwalsheimpro_regular"
-                            android:textSize="12sp"
-                            android:gravity="center"
-                            android:paddingTop="10dp"
-                            android:textColor="@color/white"
-                            android:text="New user"
-                            tools:ignore="MissingConstraints" />
-
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:paddingBottom="10dp"
-                            android:layout_marginTop="5dp"
-                            android:fontFamily="@font/gtwalsheimpro_bold"
-                            android:textSize="12sp"
-                            android:textColor="@color/red"
-                            android:text="12"
-                            tools:ignore="MissingConstraints" />
-
-                    </LinearLayout>
-                </androidx.constraintlayout.widget.ConstraintLayout>
-
-
-
-            </androidx.cardview.widget.CardView>
-
-            <androidx.cardview.widget.CardView
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_margin="10dp"
-                app:cardCornerRadius="15dp"
-                app:cardElevation="10dp"
-                app:cardMaxElevation="5dp"
-                app:cardBackgroundColor="@color/d_black"
-                android:layout_weight="1">
-                <androidx.constraintlayout.widget.ConstraintLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:background="@color/black">
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:orientation="vertical"
-                        android:gravity="center">
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="center_horizontal"
-                            android:fontFamily="@font/gtwalsheimpro_regular"
-                            android:textSize="12sp"
-                            android:gravity="center"
-                            android:paddingTop="10dp"
-                            android:textColor="@color/white"
-                            android:text="New withdrawal"
-                            tools:ignore="MissingConstraints" />
-
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="center_horizontal"
-                            android:paddingBottom="10dp"
-                            android:layout_marginTop="5dp"
-                            android:fontFamily="@font/gtwalsheimpro_bold"
-                            android:textSize="12sp"
-                            android:textColor="@color/red"
-                            android:text="10"
-                            tools:ignore="MissingConstraints" />
-
-                    </LinearLayout>
-
-                </androidx.constraintlayout.widget.ConstraintLayout>
-
-            </androidx.cardview.widget.CardView>
-
-            <androidx.cardview.widget.CardView
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_margin="10dp"
-                app:cardCornerRadius="15dp"
-                app:cardElevation="10dp"
-                app:cardMaxElevation="5dp"
-                app:cardBackgroundColor="@color/d_black"
-                android:layout_weight="1">
-                <androidx.constraintlayout.widget.ConstraintLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:background="@color/black">
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:orientation="vertical"
-                        android:gravity="center">
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="center_horizontal"
-                            android:fontFamily="@font/gtwalsheimpro_regular"
-                            android:textSize="12sp"
-                            android:gravity="center"
-                            android:paddingTop="10dp"
-                            android:textColor="@color/white"
-                            android:text="New deposits"
-                            tools:ignore="MissingConstraints" />
-
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="center_horizontal"
-                            android:paddingBottom="10dp"
-                            android:layout_marginTop="5dp"
-                            android:fontFamily="@font/gtwalsheimpro_bold"
-                            android:textSize="12sp"
-                            android:textColor="@color/red"
-                            android:text="8"
-                            tools:ignore="MissingConstraints" />
-
-                    </LinearLayout>
-
-                </androidx.constraintlayout.widget.ConstraintLayout>
-
-            </androidx.cardview.widget.CardView>
-
-        </LinearLayout>-->
 
         <TextView
             android:layout_marginLeft="15dp"
@@ -700,6 +544,91 @@
                     </androidx.constraintlayout.widget.ConstraintLayout>
                 </androidx.cardview.widget.CardView>
             </LinearLayout>
+
+
+           <!-- <LinearLayout
+                android:orientation="horizontal"
+                android:layout_width="200dp"
+                android:layout_height="0dp"
+                android:layout_weight="1"
+                android:gravity="center">
+
+                <androidx.cardview.widget.CardView
+                    android:id="@+id/card11"
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
+                    android:layout_height="130dp"
+                    app:cardCornerRadius="12dp"
+                    app:cardElevation="5dp"
+                    android:layout_margin="10dp">
+                    <androidx.constraintlayout.widget.ConstraintLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:background="@color/black">
+
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:orientation="vertical"
+                            android:gravity="center"
+                            >
+
+                            <ImageView
+                                android:layout_width="50dp"
+                                android:layout_height="50dp"
+                                android:src="@drawable/refral"
+                                android:layout_marginTop="18dp"/>
+
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="Create Referal"
+                                style="@style/dashbord"
+                                android:layout_marginTop="20dp"/>
+
+                        </LinearLayout>
+                    </androidx.constraintlayout.widget.ConstraintLayout>
+                </androidx.cardview.widget.CardView>
+
+               <androidx.cardview.widget.CardView
+                    android:id="@+id/card10"
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
+                    android:layout_height="130dp"
+                    app:cardCornerRadius="12dp"
+                    app:cardElevation="5dp"
+                    android:layout_margin="10dp">
+                    <androidx.constraintlayout.widget.ConstraintLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:background="@color/black">
+
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:orientation="vertical"
+                            android:gravity="center"
+                            >
+
+                            <ImageView
+                                android:layout_width="50dp"
+                                android:layout_height="50dp"
+                                android:src="@drawable/chat"
+                                android:layout_marginTop="18dp"/>
+
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="Raise Concern"
+                                style="@style/dashbord"
+                                android:layout_marginTop="20dp"/>
+
+                        </LinearLayout>
+                    </androidx.constraintlayout.widget.ConstraintLayout>
+                </androidx.cardview.widget.CardView>&ndash;&gt;
+            </LinearLayout>-->
+
+
         </LinearLayout>
         </ScrollView>
     </LinearLayout>
