--- a/app/src/main/res/layout/new_dashbord.xml
+++ b/app/src/main/res/layout/new_dashbord.xml
@@ -546,9 +546,9 @@
             </LinearLayout>
 
 
-           <!-- <LinearLayout
+            <LinearLayout
                 android:orientation="horizontal"
-                android:layout_width="200dp"
+                android:layout_width="180dp"
                 android:layout_height="0dp"
                 android:layout_weight="1"
                 android:gravity="center">
@@ -574,15 +574,15 @@
                             >
 
                             <ImageView
-                                android:layout_width="50dp"
-                                android:layout_height="50dp"
-                                android:src="@drawable/refral"
-                                android:layout_marginTop="18dp"/>
+                                android:layout_width="37dp"
+                                android:layout_height="37dp"
+                                android:layout_marginTop="18dp"
+                                android:src="@drawable/offers" />
 
                             <TextView
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:text="Create Referal"
+                                android:text="Offers"
                                 style="@style/dashbord"
                                 android:layout_marginTop="20dp"/>
 
@@ -590,7 +590,7 @@
                     </androidx.constraintlayout.widget.ConstraintLayout>
                 </androidx.cardview.widget.CardView>
 
-               <androidx.cardview.widget.CardView
+              <!-- <androidx.cardview.widget.CardView
                     android:id="@+id/card10"
                     android:layout_width="0dp"
                     android:layout_weight="1"
@@ -625,8 +625,8 @@
 
                         </LinearLayout>
                     </androidx.constraintlayout.widget.ConstraintLayout>
-                </androidx.cardview.widget.CardView>&ndash;&gt;
-            </LinearLayout>-->
+                </androidx.cardview.widget.CardView>-->
+            </LinearLayout>
 
 
         </LinearLayout>
